[metadata]
name = pdfpassword
version = 0.0.1-dev
license = GPL-3.0-or-later
description = PDF Password allows to Password-Protect PDF documents

[options]
packages=find:
python_requires = >= 3.6

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    pdfpassword = pdfpassword.main:main
